--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@vimeo/vimeo": "^3.0.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
     "connect-multiparty": "^2.2.0",
