--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "nodemailer-smtp-transport": "^2.4.2",
