--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "nodemailer-smtp-transport": "^2.4.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.8.1"
   }
 }
