--- a/package.json
+++ b/package.json
@@ -12,23 +12,34 @@
   "license": "ISC",
   "dependencies": {
     "@vimeo/vimeo": "^3.0.0",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-promise-router": "^4.1.1",
+    "express-rate-limit": "^7.5.1",
+    "express-slow-down": "^2.1.0",
+    "express-validator": "^7.3.1",
+    "file-type": "^19.6.0",
     "get-video-duration": "^4.1.0",
     "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "jsdom": "^23.2.0",
     "jsonwebtoken": "^9.0.1",
+    "mercadopago": "^2.11.0",
     "mongoose": "^7.4.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "nodemailer-smtp-transport": "^2.4.2",
     "nodemon": "^3.0.1",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1"
   }
 }
