--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "dompurify": "^3.3.1",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
