--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nodemon": "^3.0.1",
     "pdfkit": "^0.13.0",
     "sharp": "^0.33.5",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "stripe": "^20.3.1"
   }
 }
